JumpScript/tests/baselines/reference/exportAssignmentWithExports.errors.txt
tests/cases/compiler/exportAssignmentWithExports.jump(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/exportAssignmentWithExports.jump (1 errors) ====
    export class C { }
    class D { }
    export = D;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.